# sm-rftm

./: Readme.md
sm/: Cargo.toml
sm/examples/: enum-wrapped-machine.rs
sm/src/: lib.rs
sm/tests/compile-fail/: machine-invalid-type.rs
sm/tests/run-pass/: enum-wrapped-machine.rs
sm_macro/: Cargo.toml
sm_macro/src/: lib.rs
sm_macro/src/sm/: event.rs  initial_state.rs  machine.rs  mod.rs  resources.rs  state.rs  transition-old.rs  transition.rs
